# example-omega-rs

./: .gitignore  Cargo.toml  README.md
data/: ex3.txt
examples/: ex1.rs  ex2.rs  ex3.rs
glade/: ex2.glade  ex3.glade
omega-sys/: Cargo.toml  build.rs
omega-sys/src/: bindings.rs  lib.rs
src/: main.rs
src/resources/: ed.glade
